syntax = "proto3";

package Netcode.Protocol;

enum PlayerState {
    ACTIVE = 0;
    DEAD = 1;
    OBSERVER = 2;
}

enum TextCategory {
    PUBLIC = 0;
    TEAM = 1;
    GROUP = 2;
    PRIVATE = 3;
    SCORE_FEED = 4;
    SERVER = 5;
    CONSOLE = 6;
}

message Float3 {
    float X = 1;
    float Y = 2;
    float Z = 3;
}

message Float4 {
    float X = 1;
    float Y = 2;
    float Z = 3;
    float W = 4;
}

message Version {
    int32 major = 1;
    int32 minor = 2;
    int32 build = 3;
}

message Shot {
    int32 creator = 1;
    int32 target = 2;
    float damage = 3;
    Netcode.Protocol.Float3 start_position = 4;
    Netcode.Protocol.Float4 ray = 5;
    Netcode.Protocol.Float3 surface_normal = 6;
}

message User {
    int32 id = 1;
    int32 kills = 2;
    int32 deaths = 3;
    float respawning_in = 4;
    Netcode.Protocol.Float3 position = 5;
    Netcode.Protocol.Float3 velocity = 6;
    Netcode.Protocol.Float4 rotation = 7;
    Netcode.Protocol.PlayerState state = 8;
    string name = 9;
    float health = 10;
}

message Text {
    Netcode.Protocol.TextCategory category = 1;
    repeated int32 addressed = 2 [packed = true];
    string content = 3;
}
